fix: add overflow scroll for event timeline

--- a/src/styles/timeline.scss
+++ b/src/styles/timeline.scss
@@ -6,6 +6,7 @@
 
 .timeline__stack-item {
   width: 100%;
+  overflow-y: scroll;
 }
 
 .timline__warning {
